Fix overflow-x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+	overflow-x: hidden;
 }
 
 html {
